<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorPrimaryDark"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_24"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorPrimaryDark"
            />

        <ImageView
            android:id="@+id/home_app_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_food_flow_icon_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_app_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_app_name_text"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_app_icon_id" />

        <TextView
            android:id="@+id/home_welcome_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/home_welcome_text"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_app_text_id" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_card_plantation_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clickable="true"
            android:layout_marginHorizontal="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@+id/home_welcome_text_id">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_card_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu_nature_foreground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_card_images_menu_text"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_card_images_menu_description"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_card_analysis_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:clickable="true"
            android:layout_marginHorizontal="@dimen/spacing_small"
            app:layout_constraintTop_toBottomOf="@+id/home_card_plantation_id">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_card_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu_analysis_foreground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_card_analysis_menu_text"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_card_analysis_menu_description"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

