<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorPrimaryDark"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_24"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorPrimaryDark"
            />

        <ImageView
            android:id="@+id/home_app_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_food_flow_icon_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/analysis_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysis_title_text"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintTop_toBottomOf="@id/home_app_icon_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/spacing_medium"
            />

        <ImageView
            android:id="@+id/analysis_img_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_card_height"
            android:src="@mipmap/ic_graphic_mock_example"
            app:layout_constraintTop_toBottomOf="@id/analysis_title_id"
            />

        <TextView
            android:id="@+id/analysis_next_step_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysis_next_step_text"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintTop_toBottomOf="@id/analysis_img_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/spacing_medium"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/analysis_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/analysis_next_step_id"
            android:hint="@string/analysis_text_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/analysis_input_id"
            android:layout_margin="@dimen/spacing_medium"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/analysis_foodflow_ai_mocked_text"
                    android:textAppearance="?textAppearanceBody1"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

