<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_notifications_24"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_settings_24"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        />

    <ImageView
        android:id="@+id/home_app_icon_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_food_flow_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/plantation_area_img_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_card_height"
        android:src="@mipmap/ic_area_a1"
        app:layout_constraintTop_toBottomOf="@id/home_app_icon_id"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/plantation_area_img_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/spacing_medium"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large"
            >
            <TextView
                android:id="@+id/plantation_area_code_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_codigo_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_code_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/plantation_area_code_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="A1"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />

            <TextView
                android:id="@+id/plantation_area_id_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_code_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_id_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_id_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_id_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_id_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="195515435616"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />

            <TextView
                android:id="@+id/plantation_area_localization_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_id_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_localization_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_localization_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_localization_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_localization_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="19º55’15’’ S e 43º56’16’’ W"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />

            <TextView
                android:id="@+id/plantation_area_type_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_localization_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_type_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_type_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_type_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_type_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="Café"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />

            <TextView
                android:id="@+id/plantation_area_humidity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_type_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_humidity_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_humidity_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_humidity_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_humidity_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="65kPa"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />

            <TextView
                android:id="@+id/plantation_area_prague_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_humidity_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_prague_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_prague_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_prague_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_prague_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="Sem indício"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/success"
                />

            <TextView
                android:id="@+id/plantation_area_disease_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_prague_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_disease_label_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <TextView
                android:id="@+id/plantation_area_disease_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/plantation_area_disease_id"
                app:layout_constraintStart_toEndOf="@id/plantation_area_disease_id"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="Cuidado"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/danger"
                />

            <TextView
                android:layout_marginTop="@dimen/spacing_large"
                android:id="@+id/plantation_area_analysis_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_disease_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plantation_area_analysis_label_text"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                />

            <TextView
                android:id="@+id/plantation_area_analysis_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantation_area_analysis_id"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Os resultados das análises indicam que é necessário iniciar os tratamentos para um possível caso de ervas daninhas. Prazo de 30 dias."
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>